crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__block__tests__block_mutation_query_gql_output.snap
---
source: crates/client/src/client/schema/block.rs
expression: operation.query
---
mutation($startTimestamp: U64, $blocksToProduce: U64!) {
  produceBlocks(blocksToProduce: $blocksToProduce, startTimestamp: $startTimestamp)
}


