crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__block__tests__blocks_connection_query_gql_output_with_tx_id_commitment.snap
---
source: crates/client/src/client/schema/block.rs
expression: operation.query
snapshot_kind: text
---
query BlocksQuery($after: String, $before: String, $first: Int, $last: Int) {
  blocks(after: $after, before: $before, first: $first, last: $last) {
    edges {
      cursor
      node {
        version
        id
        header {
          version
          id
          daHeight
          consensusParametersVersion
          stateTransitionBytecodeVersion
          transactionsCount
          messageReceiptCount
          transactionsRoot
          messageOutboxRoot
          eventInboxRoot
          height
          prevRoot
          time
          applicationHash
          txIdCommitment
        }
        consensus {
          __typename
          ... on Genesis {
            chainConfigHash
            coinsRoot
            contractsRoot
            messagesRoot
            transactionsRoot
          }
          ... on PoAConsensus {
            signature
          }
        }
        transactionIds
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}
